2009-05-11  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Holger Freyther.

        Change Qt port to match the mac and windows ports, and unregister plugins when plugins are stopped.
        Not doing that can cause assersion failure.
        https://bugs.webkit.org/show_bug.cgi?id=25702

        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::stop):

2009-05-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Holger Freyther.

        Bug 25714: [Qt] Decouple HTML5 Database support from the
        SQLite/generic database support in the Qt port

        <https://bugs.webkit.org/show_bug.cgi?id=25714>

        * WebCore.pro:

2009-05-11  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Bug 25713: AX: Control Elements not identified in HTML content
        https://bugs.webkit.org/show_bug.cgi?id=25713

        Test: accessibility/onclick-handlers.html

        * page/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::mouseButtonListener):

2009-05-11  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6276843> REGRESSION: TextIterator generates
        an extra newline for ranges that start outside of body

        * editing/TextIterator.cpp:
        (WebCore::TextIterator::shouldRepresentNodeOffsetZero):
        Check startPos for null, not just currPos.

2009-05-11  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Bug 25700: Regression:WebKit:cmd-left and cmd-right use to go to the beginning and end of a line in Mail
        https://bugs.webkit.org/show_bug.cgi?id=25700

        Keyboard selection movement handlers need to also watch for the Cmd key when Accessibility is enabled.
        Note: This code is only used when accessibility is enabled.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleKeyboardSelectionMovement):

2009-05-11  David Kilzer  <ddkilzer@apple.com>
